[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/ProfilControlScene.gd" type="Script" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 4

[sub_resource type="StyleBoxEmpty" id=3]

[node name="ProfileControl" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="BackgroundColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_top = -1.0
margin_right = -1.0
margin_bottom = -1.0
color = Color( 0.121569, 0.615686, 0.858824, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = -0.00292969
anchor_top = -0.00166667
anchor_right = 0.995117
anchor_bottom = 0.998333
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 200.0
rect_min_size = Vector2( 1024, 200 )
size_flags_horizontal = 3
custom_styles/separator = SubResource( 2 )

[node name="SelectProfileCenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 204.0
margin_right = 1024.0
margin_bottom = 218.0

[node name="SelectProfileLabel" type="Label" parent="VBoxContainer/SelectProfileCenterContainer"]
material = SubResource( 1 )
margin_left = 468.0
margin_right = 556.0
margin_bottom = 14.0
size_flags_horizontal = 0
text = "Select Profile:"

[node name="ProfileCenterContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 222.0
margin_right = 1024.0
margin_bottom = 522.0
rect_min_size = Vector2( 300, 300 )
mouse_filter = 1

[node name="ProfileVBoxContainer" type="VBoxContainer" parent="VBoxContainer/ProfileCenterContainer"]
margin_right = 1024.0
margin_bottom = 300.0
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
margin_top = 526.0
margin_right = 1024.0
margin_bottom = 556.0
rect_min_size = Vector2( 1024, 30 )
size_flags_horizontal = 3
custom_styles/separator = SubResource( 2 )

[node name="ButtonCenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 560.0
margin_right = 1024.0
margin_bottom = 600.0

[node name="ButtonGridContainer" type="GridContainer" parent="VBoxContainer/ButtonCenterContainer"]
margin_left = 424.0
margin_right = 600.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="BackButton" type="Button" parent="VBoxContainer/ButtonCenterContainer/ButtonGridContainer"]
margin_right = 42.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 30 )
size_flags_vertical = 3
text = "Back"

[node name="CreateNewProfileButton" type="Button" parent="VBoxContainer/ButtonCenterContainer/ButtonGridContainer"]
margin_left = 46.0
margin_right = 176.0
margin_bottom = 40.0
text = "Create New Profile"

[node name="ProfileCreationPanel" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -153.5
margin_top = -47.0
margin_right = 153.5
margin_bottom = 47.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ProfileCreationPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="ProfileCreationPanel/VBoxContainer"]
margin_right = 307.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NewProfileNameLabel" type="Label" parent="ProfileCreationPanel/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 117.0
margin_bottom = 19.0
text = "New profile name:"

[node name="NewProfileNameLineEdit" type="LineEdit" parent="ProfileCreationPanel/VBoxContainer/HBoxContainer"]
margin_left = 121.0
margin_right = 307.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
max_length = 20

[node name="HBoxContainer2" type="HBoxContainer" parent="ProfileCreationPanel/VBoxContainer"]
margin_top = 28.0
margin_right = 307.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CreateNewProfileButton" type="Button" parent="ProfileCreationPanel/VBoxContainer/HBoxContainer2"]
margin_right = 307.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Create Profile"

[node name="VSeparator" type="VSeparator" parent="ProfileCreationPanel/VBoxContainer"]
margin_top = 52.0
margin_right = 307.0
margin_bottom = 70.0
size_flags_vertical = 3
custom_styles/separator = SubResource( 3 )

[node name="HBoxContainer3" type="HBoxContainer" parent="ProfileCreationPanel/VBoxContainer"]
margin_top = 74.0
margin_right = 307.0
margin_bottom = 94.0

[node name="ClosePopupButton" type="Button" parent="ProfileCreationPanel/VBoxContainer/HBoxContainer3"]
margin_right = 307.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Close"

[node name="NoticePanel" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -50.0
margin_right = 160.0
margin_bottom = 50.0
rect_min_size = Vector2( 300, 40 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="NoticePanel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NoticeLabel" type="Label" parent="NoticePanel/VBoxContainer"]
margin_right = 320.0
margin_bottom = 14.0
size_flags_vertical = 1
text = "Notice"
align = 1

[node name="NoticeTextLabel" type="Label" parent="NoticePanel/VBoxContainer"]
margin_top = 18.0
margin_right = 320.0
margin_bottom = 76.0
size_flags_vertical = 3
custom_colors/font_color = Color( 0.976471, 0.0431373, 0.0431373, 1 )
autowrap = true

[node name="CloseButton" type="Button" parent="NoticePanel/VBoxContainer"]
margin_top = 80.0
margin_right = 320.0
margin_bottom = 100.0
text = "Close"

[node name="DeleteProfilePanel" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -50.0
margin_right = 160.0
margin_bottom = 50.0
rect_min_size = Vector2( 300, 40 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="DeleteProfilePanel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NoticeDeleteProfileLabel" type="Label" parent="DeleteProfilePanel/VBoxContainer"]
margin_right = 320.0
margin_bottom = 14.0
size_flags_vertical = 1
text = "Delete Profile"
align = 1

[node name="NoticeDeleteProfileTextLabel" type="Label" parent="DeleteProfilePanel/VBoxContainer"]
margin_top = 18.0
margin_right = 320.0
margin_bottom = 76.0
size_flags_vertical = 3
custom_colors/font_color = Color( 0.976471, 0.0431373, 0.0431373, 1 )
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="DeleteProfilePanel/VBoxContainer"]
margin_top = 80.0
margin_right = 320.0
margin_bottom = 100.0

[node name="AcceptDeleteProfileButton" type="Button" parent="DeleteProfilePanel/VBoxContainer/HBoxContainer"]
margin_right = 158.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Accept"

[node name="CloseDeleteProfilePanelButton" type="Button" parent="DeleteProfilePanel/VBoxContainer/HBoxContainer"]
margin_left = 162.0
margin_right = 320.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Close"
